// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Report renders the report 1`] = `
<span>
  <li
    className="sc-htpNat iDskHQ"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="sc-bxivhb ejCdsA"
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 700,
          }
        }
      >
        <span
          className="sc-bZQynM BOwjm"
        >
          Weekly Sync Report
        </span>
      </span>
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        <span
          className="sc-gzVnrw kmTeHH"
        >
          October 11, 2017
        </span>
      </span>
    </span>
  </li>
</span>
`;

exports[`Snapshots ReportList loading state 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#59626a",
        "fontFamily": "\\"Roboto\\", sans-serif",
        "fontSize": "1rem",
        "fontWeight": 400,
      }
    }
  >
    Loading...
  </span>
</span>
`;

exports[`Snapshots ReportList renders the reports collection in a list 1`] = `
<span>
  <ol
    className="sc-htoDjs cysWFd"
  >
    <li
      className="sc-htpNat iDskHQ"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="sc-bxivhb ejCdsA"
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 700,
            }
          }
        >
          <span
            className="sc-bZQynM BOwjm"
          >
            Weekly Sync Report
          </span>
        </span>
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          <span
            className="sc-gzVnrw kmTeHH"
          >
            November 8, 2017
          </span>
        </span>
      </span>
    </li>
    <li
      className="sc-htpNat iDskHQ"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="sc-bxivhb ejCdsA"
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 700,
            }
          }
        >
          <span
            className="sc-bZQynM BOwjm"
          >
            Client Social Media Campaign
          </span>
        </span>
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          <span
            className="sc-gzVnrw kmTeHH"
          >
            October 11, 2017
          </span>
        </span>
      </span>
    </li>
  </ol>
</span>
`;
